Correcion de links

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--==================== CSS ====================-->
-        <link rel="stylesheet" href="/assets/css/styles.css">
+        <link rel="stylesheet" href="../assets/css/styles.css">
         <!--==================== UNICONS ====================-->
         <script src="https://kit.fontawesome.com/91e11de106.js" crossorigin="anonymous"></script>
         <title>Responsive Portfolio Website</title>
@@ -598,7 +598,7 @@
         </a>
 
         <!--==================== MAIN JS ====================-->
-        <script src="/assets/js/main.js"></script>
+        <script src="../assets/js/main.js"></script>
         <!--==================== FORM ====================-->
         <script src="https://smtpjs.com/v3/smtp.js"></script>
     </body>
