--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
     <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--==================== CSS ====================-->
-        <link rel="stylesheet" href="../assets/css/styles.css">
+        <link rel="stylesheet" href="/assets/css/styles.css">
         <!--==================== UNICONS ====================-->
         <script src="https://kit.fontawesome.com/91e11de106.js" crossorigin="anonymous"></script>
         <title>Responsive Portfolio Website</title>
@@ -598,9 +599,10 @@
         </a>
 
         <!--==================== MAIN JS ====================-->
-        <script src="../assets/js/main.js"></script>
+        
         <!--==================== FORM ====================-->
         <script src="https://smtpjs.com/v3/smtp.js"></script>
+        <script src="/assets/js/main.js"></script>
     </body>
 </html>
 
