pruena correcion error 404

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Responsive Portfolio Website</title>
         <!--==================== CSS ====================-->
-        <link rel="stylesheet" href="/assets/css/styles.css">
+        <link rel="stylesheet" href="assets/css/styles.css">
         <!--==================== UNICONS ====================-->
         <script src="https://kit.fontawesome.com/91e11de106.js" crossorigin="anonymous"></script>
-        <title>Responsive Portfolio Website</title>
+        
     </head>
     <body>
         <!--==================== HEADER ====================-->
@@ -602,7 +603,7 @@
         
         <!--==================== FORM ====================-->
         <script src="https://smtpjs.com/v3/smtp.js"></script>
-        <script src="/assets/js/main.js"></script>
+        <script src="assets/js/main.js"></script>
     </body>
 </html>
 
