--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Responsive Portfolio Website</title>
         <!--==================== CSS ====================-->
-        <link rel="stylesheet" href="/assets/css/styles.css">
+        <link rel="stylesheet" href="assets/css/styles.css">
         <!--==================== UNICONS ====================-->
         <script src="https://kit.fontawesome.com/91e11de106.js" crossorigin="anonymous"></script>
         
@@ -603,7 +603,7 @@
         
         <!--==================== FORM ====================-->
         <script src="https://smtpjs.com/v3/smtp.js"></script>
-        <script src="/assets/js/main.js"></script>
+        <script src="assets/js/main.js"></script>
     </body>
 </html>
 
