fixed skill section

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
                 <div class="skills__container container grid">
                     <!--==================== SKILLS 1 ====================-->
-                    <div class="skills__content skills__open">
+                    <div class="skills__content skills__close">
                         <div class="skills__header">
                             <i class="fas fa-code skills__icon"></i>
 
