correcion de textos e imgs

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
                             </svg>
                         </div>
                         <div class="home__data">
-                            <h1 class="home__title">!Hola, soy Santiago!</h1>
+                            <h1 class="home__title">¡Hola, soy Santiago!</h1>
                             <h3 class="home__subtitle">Desarrollador Frontend</h3>
-                            <p class="home__description">Experiencia en el armado y desarrollo de sitios web, aportando cirterio de diseño web.</p>
+                            <p class="home__description">Experiencia en diseño y desarrollo visual e interactivo de sitios web.</p>
                             <a href="#contact" class="button button--flex">
                                 Contáctame  <i class="fas fa-inbox button__icon"></i>
                             </a>
@@ -126,14 +126,14 @@
                 <span class="section__subtitle">Mi introducción</span>
 
                 <div class="about__container container grid">
-                    <img src="assets/img/img-perfil.png" alt="" class="about__img">
+                    <img src="assets/img/foto-perfil-dos.jpg" alt="" class="about__img">
                     <div class="about__data">
                         <p class="about__description">
-                            A lo largo de mi vida he desarrollado y/o mejorado distintas habilidades a la hora de realizar mis trabajos, como la creatividad y el diseño de soluciones a distintos problemas,la capacidad de relacionarme tanto sea con compañeros de trabajo como con clientes, haciendo enfasis siempre en la responsabilidad.
+                           Busco que mis trabajos logren una interacción atractiva e intuitiva con el usuario. Capacitandome e interiorizandome para lograr que los sitios web cumplan con la utilidad, accesibilidad y una satisfactoria experiencia.
                         </p>
                         <div class="about__info">
                             <div>
-                                <span class="about__info-title">+1000</span>
+                                <span class="about__info-title">+800</span>
                                 <span class="about__info-name">horas <br> de experience</span>
                             </div>
                             <div>
