--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <span class="section__subtitle">Mi introducción</span>
 
                 <div class="about__container container grid">
-                    <img src="assets/img/foto-perfil-dos.jpg" alt="" class="about__img">
+                    <img src="assets/img/foto-perfil-2-copia.png" alt="" class="about__img">
                     <div class="about__data">
                         <p class="about__description">
                            Busco que mis trabajos logren una interacción atractiva e intuitiva con el usuario. Capacitandome e interiorizandome para lograr que los sitios web cumplan con la utilidad, accesibilidad y una satisfactoria experiencia.
@@ -470,7 +470,7 @@
 
                         <!--==================== PORTFOLIO 3====================-->
                         <div class="portfolio__content grid" data-id="3">
-                            <img src="assets/img/b-port.jpeg" alt="" class="portfolio__img">
+                            <img src="assets/img/Group 1.png" alt="" class="portfolio__img">
 
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">B-PORT</h3>
