--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                         <i class="fas fa-arrow-left slider__arrow" id="before"></i>
                         <!--==================== PORTFOLIO 1====================-->
                         <div class="portfolio__content grid portfolio__content--show" data-id="1">
-                            <img src="assets/img/letToast.jpeg" alt="" class="portfolio__img">
+                            <img src="assets/img/Group 2.png" alt="" class="portfolio__img">
 
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">Let's Toast</h3>
@@ -456,7 +456,7 @@
 
                         <!--==================== PORTFOLIO 2====================-->
                         <div class="portfolio__content grid" data-id="2">
-                            <img src="assets/img/cotiflet.jpeg" alt="" class="portfolio__img">
+                            <img src="assets/img/Group 3.png" alt="" class="portfolio__img">
 
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">Coti-Flet</h3>
