--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
             <nav class="nav container">
-                <a href="#" class="nav__logo">Santiago</a>
+                <a href="#home" class="nav__logo">Santiago</a>
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list grid">
                         <li class="nav__item">
@@ -475,7 +475,7 @@
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">B-PORT</h3>
                                 <p class="portfolio__description">E-commerce de tienda de ropa hecho con HTML,CSS, Sass y Bootstrap.</p>
-                                <a href="#" class="button button--flex button--small portfolio__button">
+                                <a href="https://santiago-pe.github.io/Proyecto-Santiago-Pe-a/" class="button button--flex button--small portfolio__button">
                                     Demo 
                                     <i class="fas fa-arrow-right button__icon"></i>
                                 </a>
