Change text description

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <div class="home__data">
                             <h1 class="home__title">¡Hola, soy Santiago!</h1>
                             <h3 class="home__subtitle">FullStack Developer</h3>
-                            <p class="home__description">Experiencia en diseño y desarrollo de aplicaciones web.</p>
+                            <p class="home__description">Me enfoco en crear aplicaciones web escalables y con una buena  experiencia del usuario, brindando apps útiles y accesibles.</p>
                             <a href="#contact" class="button button--flex">
                                 Contáctame  <i class="fas fa-inbox button__icon"></i>
                             </a>
@@ -129,7 +129,7 @@
                     <!-- <img src="assets/img/foto-perfil-2-copia.png" alt="" class="about__img"> -->
                     <div class="about__data">
                             <p class="about__description">
-                                Busco que mis trabajos logren una interacción atractiva e intuitiva con el usuario. Capacitandome e interiorizandome para lograr que los sitios web cumplan con la utilidad, accesibilidad y una satisfactoria experiencia.
+                                Mi objetivo como desarrollador Full Stack es asegurarme de que las aplicaciones web que desarrollo sean escalables, eficientes y atractivas visualmente. Me aseguro de tener un conocimiento profundo tanto del front-end como del back-end para garantizar que cada componente de la aplicación se integre sin problemas. Mi enfoque está en crear aplicaciones web útiles, accesibles e intuitivas que brinden una experiencia satisfactoria en todo momento.
                             </p>
                         <!-- <div class="about__info">
                             <div>
