Change text of portfolio

--- a/index.html
+++ b/index.html
@@ -515,12 +515,12 @@
                         <i class="fas fa-arrow-left slider__arrow" id="before"></i>
                         
                         <!--==================== TALENT CO ====================-->
-                        <div class="portfolio__content grid portfolio__content--show" data-id="1">
-                            <img src="assets/img/Group 2.png" alt="" class="portfolio__img">
+                        <div class="portfolio__content flex portfolio__content--show" data-id="1">
+                            <img src="assets/img/talentco.png" alt="talent-co" class="portfolio__img">
 
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">Talent Co</h3>
-                                <p class="portfolio__description">Wordpress</p>
+                                <p class="portfolio__description">En mi trabajo en Talent Co, utilicé mis habilidades en Wordpress y Elementor para crear sitios web de alta calidad y funcionalidad. Además, aproveché componentes de JavaScript para ampliar aún más las funcionalidades. También trabajé en la personalización de la apariencia de los sitios mediante el uso de CSS, asegurándome de que el diseño fuera atractivo y coherente con la marca del cliente</p>
                                 <a href="https://talent-co.com/" class="button button--flex button--small portfolio__button">
                                     Demo 
                                     <i class="fas fa-arrow-right button__icon"></i>
@@ -529,8 +529,8 @@
                         </div>
 
                         <!--==================== BLINKIT ====================-->
-                        <div class="portfolio__content grid" data-id="2">
-                            <img src="assets/img/Group 3.png" alt="" class="portfolio__img">
+                        <div class="portfolio__content flex" data-id="2">
+                            <img src="assets/img/blinkit.png" alt="blinkit" class="portfolio__img">
 
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">Blinkit</h3>
@@ -542,26 +542,26 @@
                             </div>
                         </div>
 
-                        <!--==================== PORTFOLIO 3====================-->
-                        <div class="portfolio__content grid" data-id="3">
-                            <img src="assets/img/Group 1.png" alt="" class="portfolio__img">
+                        <!--==================== GRUPO 866 ====================-->
+                        <div class="portfolio__content flex" data-id="3">
+                            <img src="assets/img/grupo866.png" alt="" class="portfolio__img">
 
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">Grupo 866</h3>
-                                <p class="portfolio__description">Wordpress</p>
+                                <p class="portfolio__description">En mi trabajo en Talent Co, utilicé mis habilidades en Wordpress y Elementor para crear sitios web de alta calidad y funcionalidad. Además, aproveché componentes de JavaScript para ampliar aún más las funcionalidades. También trabajé en la personalización de la apariencia de los sitios mediante el uso de CSS, asegurándome de que el diseño fuera atractivo y coherente con la marca del cliente</p>
                                 <a href="https://grupo866.com/" class="button button--flex button--small portfolio__button">
                                     Demo 
                                     <i class="fas fa-arrow-right button__icon"></i>
                                 </a>
                             </div>
                         </div>
-                        <!--==================== PORTFOLIO 4====================-->
-                        <div class="portfolio__content grid" data-id="4">
-                            <img src="assets/img/Group 1.png" alt="" class="portfolio__img">
+                        <!--==================== DSH ====================-->
+                        <div class="portfolio__content flex" data-id="4">
+                            <img src="assets/img/DSH.png" alt="" class="portfolio__img">
 
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">Drapper Starter House LATAM</h3>
-                                <p class="portfolio__description">Wordpress</p>
+                                <p class="portfolio__description">En mi trabajo en Talent Co, utilicé mis habilidades en Wordpress y Elementor para crear sitios web de alta calidad y funcionalidad. Además, aproveché componentes de JavaScript para ampliar aún más las funcionalidades. También trabajé en la personalización de la apariencia de los sitios mediante el uso de CSS, asegurándome de que el diseño fuera atractivo y coherente con la marca del cliente</p>
                                 <a href="https://dshlatam.com/" class="button button--flex button--small portfolio__button">
                                     Demo 
                                     <i class="fas fa-arrow-right button__icon"></i>
@@ -569,12 +569,12 @@
                             </div>
                         </div>
                          <!--==================== PORTFOLIO 5====================-->
-                         <div class="portfolio__content grid" data-id="5">
-                            <img src="assets/img/Group 1.png" alt="" class="portfolio__img">
+                         <div class="portfolio__content flex" data-id="5">
+                            <img src="assets/img/aminochem.png" alt="" class="portfolio__img">
 
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">Aminochem</h3>
-                                <p class="portfolio__description">Wordpress</p>
+                                <p class="portfolio__description">En mi trabajo en Talent Co, utilicé mis habilidades en Wordpress y Elementor para crear sitios web de alta calidad y funcionalidad. Además, aproveché componentes de JavaScript para ampliar aún más las funcionalidades. También trabajé en la personalización de la apariencia de los sitios mediante el uso de CSS, asegurándome de que el diseño fuera atractivo y coherente con la marca del cliente</p>
                                 <a href="https://www.aminochem.com/" class="button button--flex button--small portfolio__button">
                                     Demo 
                                     <i class="fas fa-arrow-right button__icon"></i>
