add text to react proyect

--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
 
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">Talent Co</h3>
-                                <p class="portfolio__description">En mi trabajo en Talent Co, utilicé mis habilidades en Wordpress y Elementor para crear sitios web de alta calidad y funcionalidad. Además, aproveché componentes de JavaScript para ampliar aún más las funcionalidades. También trabajé en la personalización de la apariencia de los sitios mediante el uso de CSS, asegurándome de que el diseño fuera atractivo y coherente con la marca del cliente</p>
+                                <p class="portfolio__description">Sitio web trabajado con Wordpress y Elementor como tecnología principal, brinando valor agregado a la hora de sumar componentes de JavaScript con CSS para brindar mayor personalización en el proyecto</p>
                                 <a href="https://talent-co.com/" class="button button--flex button--small portfolio__button">
                                     Demo 
                                     <i class="fas fa-arrow-right button__icon"></i>
@@ -534,7 +534,7 @@
 
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">Blinkit</h3>
-                                <p class="portfolio__description">React Js</p>
+                                <p class="portfolio__description">Proyecto web de React, donde tuve la oportunidad de aportar mi criterio y experiencia en el desarrollo de componentes UX/UI. Mi principal objetivo fue mejorar la interacción entre el usuario y la plataforma, creando una experiencia de usuario más intuitiva y agradable</p>
                                 <a href="https://www.blinkit.com.ar/" class="button button--flex button--small portfolio__button">
                                     Demo 
                                         <i class="fas fa-arrow-right button__icon"></i>
@@ -548,7 +548,7 @@
 
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">Grupo 866</h3>
-                                <p class="portfolio__description">En mi trabajo en Talent Co, utilicé mis habilidades en Wordpress y Elementor para crear sitios web de alta calidad y funcionalidad. Además, aproveché componentes de JavaScript para ampliar aún más las funcionalidades. También trabajé en la personalización de la apariencia de los sitios mediante el uso de CSS, asegurándome de que el diseño fuera atractivo y coherente con la marca del cliente</p>
+                                <p class="portfolio__description">Utilizando WordPress y Elementor como tecnologías principales, hemos trabajado en la creación de un sitio web que se destaca por su gran personalización. Gracias a la integración de componentes de JavaScript con CSS, hemos logrado sumar valor al proyecto y ofrecer una experiencia de usuario única</p>
                                 <a href="https://grupo866.com/" class="button button--flex button--small portfolio__button">
                                     Demo 
                                     <i class="fas fa-arrow-right button__icon"></i>
@@ -561,7 +561,7 @@
 
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">Drapper Starter House LATAM</h3>
-                                <p class="portfolio__description">En mi trabajo en Talent Co, utilicé mis habilidades en Wordpress y Elementor para crear sitios web de alta calidad y funcionalidad. Además, aproveché componentes de JavaScript para ampliar aún más las funcionalidades. También trabajé en la personalización de la apariencia de los sitios mediante el uso de CSS, asegurándome de que el diseño fuera atractivo y coherente con la marca del cliente</p>
+                                <p class="portfolio__description">Al desarrollar este sitio web, nos hemos enfocado en utilizar WordPress y Elementor como tecnologías principales para ofrecer una mayor personalización. Hemos sumado valor al proyecto mediante la inclusión de componentes de JavaScript y CSS, lo que ha permitido crear un sitio web atractivo y funcional que cumple con las necesidades de nuestros clientes.</p>
                                 <a href="https://dshlatam.com/" class="button button--flex button--small portfolio__button">
                                     Demo 
                                     <i class="fas fa-arrow-right button__icon"></i>
@@ -574,7 +574,7 @@
 
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">Aminochem</h3>
-                                <p class="portfolio__description">En mi trabajo en Talent Co, utilicé mis habilidades en Wordpress y Elementor para crear sitios web de alta calidad y funcionalidad. Además, aproveché componentes de JavaScript para ampliar aún más las funcionalidades. También trabajé en la personalización de la apariencia de los sitios mediante el uso de CSS, asegurándome de que el diseño fuera atractivo y coherente con la marca del cliente</p>
+                                <p class="portfolio__description">Sitio web trabajado con Wordpress y Elementor como tecnología principal, brinando valor agregado a la hora de sumar componentes de JavaScript con CSS para brindar mayor personalización en el proyecto</p>
                                 <a href="https://www.aminochem.com/" class="button button--flex button--small portfolio__button">
                                     Demo 
                                     <i class="fas fa-arrow-right button__icon"></i>
@@ -690,7 +690,6 @@
                     </div>
 
                 </div>
-                <p class="footer__copy">&#169; Bedimcode. All right reserved.</p>
             </div>
         </footer>
         
